--- a/public/template.html
+++ b/public/template.html
@@ -5,6 +5,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <h1>test</h1>
+    <h1>Hello World</h1>
+    <div id="icon"></div>
   </body>
 </html>
