--- a/public/template.html
+++ b/public/template.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
     <h1>Hello World</h1>
-    <div id="icon"></div>
   </body>
 </html>
