--- a/public/template.html
+++ b/public/template.html
@@ -6,6 +6,13 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h2>Image test jpeg :</h2>
+    <img src="<%= require('./assets/images/webpack.jpeg') %>" width="300"/>
+    <h2>Image test png :</h2>
+    <img src="<%= require('./assets/images/webpack.png') %>" width="300"/>
+    <h2>Image test svg :</h2>
+    <img src="<%= require('./assets/images/webpack.svg') %>" width="300"/>
+    <h2>Font test :</h2>
+    <p>Hello world</p>
   </body>
 </html>
