--- a/public/template.html
+++ b/public/template.html
@@ -6,13 +6,13 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <h2>Image test jpeg :</h2>
-    <img src="<%= require('./assets/images/webpack.jpeg') %>" width="300"/>
-    <h2>Image test png :</h2>
-    <img src="<%= require('./assets/images/webpack.png') %>" width="300"/>
-    <h2>Image test svg :</h2>
-    <img src="<%= require('./assets/images/webpack.svg') %>" width="300"/>
-    <h2>Font test :</h2>
+    <h2>Exemple jpeg :</h2>
+    <img src="./assets/images/webpack.jpeg" width="300"/>
+    <h2>Exemple png :</h2>
+    <img src="./assets/images/webpack.png" width="300"/>
+    <h2>Exemple svg :</h2>
+    <img src="./assets/images/webpack.svg" width="300"/>
+    <h2>Exemple font :</h2>
     <p>Hello world</p>
   </body>
 </html>
